updated layout and styles

--- a/index.html
+++ b/index.html
@@ -22,18 +22,6 @@
 
     </header>
 
-    <nav>
-
-        <a href="#about">About</a>
-
-        <a href="#achievements">Achievements</a>
-
-        <a href="#gallery">Gallery</a>
-
-        <a href="#family">Family</a>
-
-    </nav>
-
     <main>
 
         <section id="about" class="about">
@@ -41,6 +29,10 @@
             <div class="section-content">
 
                 <img src="images/about_image.jpg" alt="About Dad">
+
+                <h2>About Dad</h2>
+
+                <p>Description about your dad...</p>
 
                 <button class="video-btn" data-src="videos/about_video.mp4">Play Video</button>
 
@@ -54,6 +46,10 @@
 
                 <img src="images/achievements_image.jpg" alt="Achievements">
 
+                <h2>Achievements</h2>
+
+                <p>List of your dad's achievements...</p>
+
                 <button class="video-btn" data-src="videos/achievements_video.mp4">Play Video</button>
 
             </div>
@@ -66,6 +62,10 @@
 
                 <img src="images/gallery_image.jpg" alt="Gallery">
 
+                <h2>Gallery</h2>
+
+                <p>Photo gallery of your dad...</p>
+
                 <button class="video-btn" data-src="videos/gallery_video.mp4">Play Video</button>
 
             </div>
@@ -77,6 +77,10 @@
             <div class="section-content">
 
                 <img src="images/family_image.jpg" alt="Family">
+
+                <h2>Family</h2>
+
+                <p>Family information...</p>
 
                 <button class="video-btn" data-src="videos/family_video.mp4">Play Video</button>
 
