--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Dad's Biography</title>
+    <title>GUBBALA RAMA MOHAN's Biography</title>
 
     <link rel="stylesheet" href="styles.css">
 
@@ -18,7 +18,7 @@
 
     <header>
 
-        <h1>Dad's Biography</h1>
+        <h1>GUBBALA RAMA MOHAN's Biography</h1>
 
     </header>
 
@@ -34,7 +34,7 @@
 
                 <p>Description about your dad...</p>
 
-                <button class="video-btn" data-src="videos/about_video.mp4">Play Video</button>
+                <button class="video-btn" data-src="videos/About_video.mp4">Play Video</button>
 
             </div>
 
@@ -50,27 +50,9 @@
 
                 <p>List of your dad's achievements...</p>
 
-                <button class="video-btn" data-src="videos/achievements_video.mp4">Play Video</button>
+                <button class="video-btn" data-src="videos/Achievements_video.mp4">Play Video</button>
 
             </div>
-
-        </section>
-
-        <section id="gallery" class="gallery">
-
-            <div class="section-content">
-
-                <img src="images/gallery_image.jpg" alt="Gallery">
-
-                <h2>Gallery</h2>
-
-                <p>Photo gallery of your dad...</p>
-
-                <button class="video-btn" data-src="videos/gallery_video.mp4">Play Video</button>
-
-            </div>
-
-        </section>
 
         <section id="family" class="family">
 
@@ -82,7 +64,7 @@
 
                 <p>Family information...</p>
 
-                <button class="video-btn" data-src="videos/family_video.mp4">Play Video</button>
+                <button class="video-btn" data-src="videos/Family_video.mp4">Play Video</button>
 
             </div>
 
@@ -92,7 +74,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Dad's Biography</p>
+        <p>&copy; 2024 GUBBALA RAMA MOHAN's Biography</p>
 
     </footer>
 
